Modified locations, customertypes and factories to use locations; added swagger
